--- a/Introduction to R.Rmd
+++ b/Introduction to R.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to R Programming"
-author: "Sana Rasheed"
-date: "May 14, 2020"
+author: "Muhammad Fiaz"
+date: "Dec 29, 2020"
 output: html_document
 ---
 
